fixing the border shifting bug

--- a/src/Categories/CategorieStyling/CategoriesStyling.scss
+++ b/src/Categories/CategorieStyling/CategoriesStyling.scss
@@ -80,15 +80,7 @@ color: #1D1F22;
     position: relative;
     left: 75%;
     top: 400px;
-    display: none;
-}
-
-.productFrame__button {
-    background-color: #789e82;
-    color: white;
-    border: none;
-    font-size: 16px;
-    display: none;
+    visibility: hidden;
 }
 
 .productFrame {
@@ -98,15 +90,9 @@ color: #1D1F22;
         transition: .5s ease;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         cursor: pointer;
-    }   
+    }
     &:hover &__icon{
-        display: block;         
+        visibility: visible;
     }
-    &:hover &__button{
-        display: block;         
-        &:active {
-            background-color: #3e8e41;
-            box-shadow: 5px #666;
-        }
-    }
+
 }
